--- a/style.css
+++ b/style.css
@@ -348,7 +348,7 @@ footer {
     display: block;
 }
 
-.technology-item img {
+.skill-item img {
     width: 4cm;
     /* Set the width of the image */
     height: auto;
